--- a/snake.html
+++ b/snake.html
@@ -1,12 +1,14 @@
 <body>
     <div id="gameContainer"></div>
     <div id="scoreContainer">
-        <div class="ScoreBoard">Food:
+        <div class="ScoreBoard">
+            Food:
             <span id="PointsEarned">0</span>
         </div>
-        <diV class="scoreBoard">Blocks:
+        <div class="scoreBoard">
+            Blocks:
             <span id="blocksTravelled">0</span>
-        </diV>
+        </div>
     </div>
     <div id="onScreenControllers">
         <button id="leftButton">◀</button>
