--- a/snake.html
+++ b/snake.html
@@ -1,9 +1,19 @@
+<html>
+
+<head lang="en">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Snake</title>
+    <!-- Link our styles from snake_game.css -->
+    <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+
 <body>
     <div id="gameContainer"></div>
     <div id="scoreContainer">
         <div class="ScoreBoard">
             Food:
-            <span id="PointsEarned">0</span>
+            <span id="pointsEarned">0</span>
         </div>
         <div class="scoreBoard">
             Blocks:
@@ -12,8 +22,13 @@
     </div>
     <div id="onScreenControllers">
         <button id="leftButton">◀</button>
-        <div id="upButton">▲</div>
-        <div id="downButton">▼</div>
-        <div id="rightButton">►</div>
-    </div>
+        <div>
+            <button id="upButton">▲</button>
+            <button id="downButton">▼</button>
+            <div>
+                <button id="rightButton">►</button>
+            </div>
 </body>
+<script src="script.js"></script>
+
+</html>
